--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,19 @@
-mrcfile
+cycler==0.10.0
+decorator==4.1.2
+h5py==2.7.0
+llvmlite==0.19.0
+matplotlib==2.0.2
+mrcfile==1.0.0
+networkx==1.11
+numba==0.34.0
+numpy==1.13.1
+olefile==0.44
+Pillow==4.2.1
+pyparsing==2.2.0
+python-dateutil==2.6.1
+pytz==2017.2
+PyWavelets==0.5.2
+scikit-image==0.13.0
+scikit-learn==0.18.2
+scipy==0.19.1
+six==1.10.0
