--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,14 @@
-name: fsc
+name: fscenv
 channels:
+- lukepfister
 - defaults
 dependencies:
+- appdirs=1.4.3=py36_0
+- certifi=2016.2.28=py36_0
+- cudatoolkit=8.0=3
 - cycler=0.10.0=py36_0
 - dbus=1.10.20=0
-- decorator=4.0.11=py36_0
+- decorator=4.1.2=py36_0
 - expat=2.1.0=0
 - fontconfig=2.12.1=3
 - freetype=2.5.5=2
@@ -20,43 +24,104 @@ dependencies:
 - libgcc=5.2.0=0
 - libgfortran=3.0.0=1
 - libiconv=1.14=0
-- libpng=1.6.27=0
+- libpng=1.6.30=1
 - libtiff=4.0.6=3
 - libxcb=1.12=1
 - libxml2=2.9.4=0
-- llvmlite=0.19.0=py36_0
+- llvmlite=0.20.0=py36_0
+- mako=1.0.6=py36_0
+- markupsafe=1.0=py36_0
 - matplotlib=2.0.2=np113py36_0
 - mkl=2017.0.3=0
 - networkx=1.11=py36_0
-- numba=0.34.0=np113py36_0
+- numba=0.35.0=np113py36_0
 - numpy=1.13.1=py36_0
 - olefile=0.44=py36_0
 - openssl=1.0.2l=0
 - pcre=8.39=1
 - pillow=4.2.1=py36_0
 - pip=9.0.1=py36_1
-- pyparsing=2.1.4=py36_0
+- pyparsing=2.2.0=py36_0
 - pyqt=5.6.0=py36_2
 - python=3.6.2=0
-- python-dateutil=2.6.0=py36_0
+- python-dateutil=2.6.1=py36_0
 - pytz=2017.2=py36_0
 - pywavelets=0.5.2=np113py36_0
-- qt=5.6.2=4
+- qt=5.6.2=5
 - readline=6.2=2
 - scikit-image=0.13.0=np113py36_0
 - scipy=0.19.1=np113py36_0
-- setuptools=27.2.0=py36_0
+- setuptools=36.4.0=py36_1
 - sip=4.18=py36_0
 - six=1.10.0=py36_0
 - sqlite=3.13.0=0
 - tk=8.5.18=0
 - wheel=0.29.0=py36_0
-- xz=5.2.2=1
-- zlib=1.2.8=3
+- xz=5.2.3=0
+- zlib=1.2.11=0
+- pycuda=2017.1=py36_0
+- pytools=2016.2.6=py36_0
 - pip:
-  - mrcfile==1.0.0
-  - scikit-learn==0.18.2
+  - amqp==2.2.1
+  - anyjson==0.3.3
+  - asn1crypto==0.22.0
+  - autopep8==1.3.3
+  - babel==2.5.3
+  - bcrypt==3.1.3
+  - billiard==3.5.0.3
+  - botocore==1.6.5
+  - cached-property==1.3.1
+  - celery==4.1.0
+  - cffi==1.10.0
+  - chardet==3.0.4
   - click==6.7
-  - colorama==0.3.9
-prefix: /home/cnegro/anaconda3/envs/fsc
+  - colorama==0.3.7
+  - cryptography==2.0.3
+  - django==1.10.7
+  - django-bootstrap3==9.0.0
+  - django-debug-toolbar==1.9.1
+  - django-fileprovider==0.1.4
+  - django-registration==2.2
+  - django-sendfile==0.3.11
+  - docker==2.7.0
+  - docker-compose==1.18.0
+  - docker-pycreds==0.2.1
+  - dockerpty==0.4.1
+  - docopt==0.6.2
+  - docutils==0.14
+  - flower==0.9.2
+  - gunicorn==19.7.1
+  - idna==2.6
+  - jinja2==2.10
+  - jmespath==0.9.3
+  - jsonschema==2.6.0
+  - kombu==4.1.0
+  - mrcfile==1.0.0
+  - nvidia-docker-compose==0.1.5
+  - paramiko==2.2.1
+  - psycopg2==2.7.4
+  - psycopg2-binary==2.7.4
+  - py==1.4.34
+  - pyasn1==0.3.2
+  - pycodestyle==2.3.1
+  - pycparser==2.18
+  - pyflakes==1.6.0
+  - pyminizip==0.2.1
+  - pynacl==1.1.2
+  - pytest==3.2.3
+  - pyyaml==3.12
+  - redis==2.10.5
+  - requests==2.18.4
+  - rsa==3.4.2
+  - s3transfer==0.1.10
+  - scikit-cuda==0.5.1
+  - selenium==3.4.3
+  - sqlparse==0.2.4
+  - texttable==0.9.1
+  - tornado==5.0
+  - urllib3==1.22
+  - uwsgi==2.0.15
+  - vine==1.1.4
+  - websocket-client==0.46.0
+prefix: /home/cnegro/anaconda3/envs/fscenv
 
